# Karya

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: goals.yaml
docs/use-cases/: 01-self-healing-home-server.md  02-autonomous-irrigation.md  04-offline-intruder-response.md  README.md
karya/: __init__.py  cli.py
karya.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
karya/backends/: llamacpp.py  ollama.py
karya/core/: context.py  hil.py  hw_detect.py  loop.py  priority.py  safety.py  state.py
karya/docs/: why-llm-not-scripts.md
karya/docs/use-cases/: 05-wildlife-monitoring.md  06-field-data-collector.md  07-predictive-maintenance.md
karya/karya_docs/use-cases/: 03-edge-server-watchdog.md
karya/tools/: __init__.py  gpio.py  serial_tool.py
karya/triggers/: base.py  cron.py  file_watch.py  gpio.py  serial.py  threshold.py
systemd/: karya.service
tests/: test_karya.py
